# llm-deq-conversion

./: .gitignore  pyproject.toml  set_server.sh
configs/: eval_config.yaml  train_config.yaml
results/details/HuggingFaceTB/SmolLM2-135M-instruct/2025-04-15T11-48-37.728400/: details_leaderboard|gsm8k|5_2025-04-15T11-48-37.728400.parquet
results/details/HuggingFaceTB/SmolLM2-135M/2025-04-15T11-45-13.085784/: details_leaderboard|gsm8k|5_2025-04-15T11-45-13.085784.parquet
results/results/HuggingFaceTB/SmolLM2-135M/: results_2025-04-15T11-45-13.085784.json
results/results/HuggingFaceTB/SmolLM2-135M-instruct/: results_2025-04-15T11-48-37.728400.json
scripts/: eval.py  train.py  train_default.py
src/llm_deq_conversion/: __init__.py  dataset.py  model.py  modelling_gpt2.py  modelling_llama.py  utils.py
