[project]
name = "llm-deq-conversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.51.3",
    "torch>=2.6.0",
    "torchdeq>=0.1.0",
    "datasets>=3.5.0",
    "pyright>=1.1.399",
    "jsonargparse>=4.38.0",
    "ipython>=9.1.0",
    "pandas>=2.2.3",
    "lightning>=2.5.1",
    "lighteval[math]>=0.8.1",
    "pydantic>=2.11.3",
    "tiktoken>=0.9.0",
    "wandb>=0.19.9",
    "deepspeed>=0.16.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
